--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,5 @@
-<ul *ngFor="let product of products">
-  <li>{{product.albumName}}</li>
+<ul>
+  <li *ngFor="let product of products">
+    <a routerLink="/product/{{product.id}}" routerLinkActive="active">{{product.albumName}}</a>
+  </li>
 </ul>
